--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,10 @@ body{
     margin: 0;
     color: #333333 ;
 }
+#tous{
+    background: #007BFF;
+    color: #f5f5f5;
+}
 add-task,edit-task{
     width: 80%;
     display: flex;
